fixed spacing

--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -1,6 +1,7 @@
 .app {
     .searchBar {
         margin: 20px;
+        margin-left: 40px;
 
         input {
             margin-right: 10px;
@@ -8,6 +9,6 @@
     }
 
     .photos {
-        padding-left: 20px;
+        padding-left: 40px;
     }
 }
