--- a/src/components/Photo/_Photo.scss
+++ b/src/components/Photo/_Photo.scss
@@ -2,6 +2,7 @@
     height: 150px;
     width: 150px;
     margin: 20px;
+    margin-left: 0;
     float: left;
 
     img {
